# src/handler/exception/schema.go
@@ -1,0 +1,6 @@
+package exception
+
+type LoginUser struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
